# loomo-algodev

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
algo_app/: build.gradle
algo_app/src/androidTest/java/com/segway/robot/algo/algo_app/: ExampleInstrumentedTest.java  MainActivityTest.java
algo_app/src/main/: AndroidManifest.xml
algo_app/src/main/java/com/segway/robot/algo/algo_app/: Algo.java  AlgoApplication.java  AlgoNativeInterface.java  CommandExecutor.java  EventReceiver.java  MainActivity.java  Renderer.java
algo_app/src/main/java/com/segway/robot/algo/algo_app/wifiap/: WifiApManager.java  WifiApStateListener.java  WifiApUtil.java
algo_app/src/main/jni/: CMakeLists.txt
algo_app/src/main/jni/app_follow/: AlgoFollow.cpp  AlgoFollow.h  DepthPreprocess.cpp  DepthPreprocess.h  PID.cpp  PID.h  SocketServer.cpp  SocketServer.h
algo_app/src/main/jni/app_localmapping_test/: AlgoLocalmappingTest.cpp  AlgoLocalmappingTest.h
algo_app/src/main/jni/app_socket/: AlgoSocket.cpp  AlgoSocket.h  README  SocketServer.cpp  SocketServer.h
algo_app/src/main/jni/app_tensorflow_sample/: AlgoTensorflowSample.cpp  AlgoTensorflowSample.h  classes.h
algo_app/src/main/jni/app_test/: AlgoTest.cpp  AlgoTest.h
algo_app/src/main/jni/core/: Algo.cpp  AlgoImpl.cpp  Entry.cpp  jniAlgo.h
algo_app/src/main/jni/scripts/: lib_list.cfg.in  lib_package.py
algo_app/src/main/res/layout/: activity_main.xml
algo_app/src/main/res/values/: strings.xml
algo_app/src/test/java/com/segway/robot/algo/algo_app/: ExampleUnitTest.java
dependency/aar/: algobase-0.6.161.aar  base-connectivity-sdk-0.5.104.aar  basesdk-0.6.685.aar  basesdkadvanced-0.6.685.aar  basic-class-0.6.161.aar  externalsdk-0.6.211.aar  headsdk-0.6.685.aar  headsdkadvanced-0.6.685.aar  nft-sdk-0.1.4.aar  robot-connectivity-sdk-0.5.104.aar  sdkbase-0.1.69.aar  sensorsdk-0.6.685.aar  visionsdk-0.6.289.aar  visionsdkadvanced-0.6.289.aar
dependency/algo_include/general/: LocalMapping.h
dependency/algo_include/tools/impl/: min_max.h
dependency/algo_include/tools/linear_math/: QuadWord.h  Quaternion.h  Scalar.h  Vector3.h
dependency/algobaseInclude/core/: env_config.h  jniLocomotion.h  jniVision.h
dependency/algobaseInclude/interface/: AlgoBase.h  ImuProcess.h  RawData.h  RawDataUtil.h  ninebot_log.h  tf_data_type.h
dependency/algobaseInclude/utils/: AlgoUtils.cpp  AlgoUtils.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
